--- a/Address Book/Address Book.csproj
+++ b/Address Book/Address Book.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Address_Book</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="15.0.8" />
+  </ItemGroup>
+
 </Project>
